--- a/atestation.html
+++ b/atestation.html
@@ -294,6 +294,12 @@ $(document).ready(function () {
     <li>
       <a href="05_dataframe_manipulation.html">Prohlížení a manipulce s dataframem</a>
     </li>
+    <li>
+      <a href="06_variables_mutate_summarise.html">Manipulace a sumarizace proměnných</a>
+    </li>
+    <li>
+      <a href="07_factors.html">Práce s faktory</a>
+    </li>
   </ul>
 </li>
 <li>
