--- a/course_data.html
+++ b/course_data.html
@@ -294,6 +294,12 @@ $(document).ready(function () {
     <li>
       <a href="05_dataframe_manipulation.html">Prohlížení a manipulce s dataframem</a>
     </li>
+    <li>
+      <a href="06_variables_mutate_summarise.html">Manipulace a sumarizace proměnných</a>
+    </li>
+    <li>
+      <a href="07_factors.html">Práce s faktory</a>
+    </li>
   </ul>
 </li>
 <li>
@@ -412,7 +418,7 @@ $(document).ready(function () {
 </tr>
 </tbody>
 </table>
-<p>Pro práci v kurzu doporučuji stáhnout data v obou formátech (<code>.csv</code> i <code>.rds</code>) a uložit si je do podsložky <code>data</code> v složce s ostatními materiály ke kurzu.</p>
+<p>Pro práci v kurzu doporučujeme stáhnout data v obou formátech (<code>.csv</code> i <code>.rds</code>) a uložit si je do podsložky <code>data</code> ve složce s ostatními materiály ke kurzu.</p>
 
 
 
