--- a/06_variables_mutate_summarise.html
+++ b/06_variables_mutate_summarise.html
@@ -370,6 +370,12 @@ div.tocify {
     <li>
       <a href="05_dataframe_manipulation.html">Prohlížení a manipulce s dataframem</a>
     </li>
+    <li>
+      <a href="06_variables_mutate_summarise.html">Manipulace a sumarizace proměnných</a>
+    </li>
+    <li>
+      <a href="07_factors.html">Práce s faktory</a>
+    </li>
   </ul>
 </li>
 <li>
@@ -395,6 +401,7 @@ div.tocify {
 </div>
 
 
+<p>Tato část je zaměřena na dvě z nejčastějších aktivit při práci s daty: transformace proměnných a jejich sumarizace.</p>
 <div id="transformace-proměnných" class="section level1">
 <h1>Transformace proměnných</h1>
 <p>pro trasfomarci proměnných Tidyverse způsobem se využívá funkce <code>mutate()</code>. Tato funkce umožňuje přidávat nebo měnit určité proměnné v dataframu a zároveň zachovat ostatní proměnné. Obecně se využívá ve formě <code>dataframe %&gt;% mutate(nova promenna = funkce(stara promena))</code>. Pokud bychom například chtěli spočitat HDP na hlavu:</p>
