--- a/05_dataframe_manipulation.html
+++ b/05_dataframe_manipulation.html
@@ -376,6 +376,9 @@ div.tocify {
     <li>
       <a href="07_factors.html">Práce s faktory</a>
     </li>
+    <li>
+      <a href="08_data_visualization.html">Vytváření grafů</a>
+    </li>
   </ul>
 </li>
 <li>
