--- a/literature.html
+++ b/literature.html
@@ -300,6 +300,9 @@ $(document).ready(function () {
     <li>
       <a href="07_factors.html">Práce s faktory</a>
     </li>
+    <li>
+      <a href="08_data_visualization.html">Vytváření grafů</a>
+    </li>
   </ul>
 </li>
 <li>
