--- a/03_objects_functions.html
+++ b/03_objects_functions.html
@@ -381,11 +381,26 @@ div.tocify {
     </li>
   </ul>
 </li>
+<li class="dropdown">
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+    Domácí úkoly
+     
+    <span class="caret"></span>
+  </a>
+  <ul class="dropdown-menu" role="menu">
+    <li>
+      <a href="03_objects_functions_homework.html">Objekty, proměnné a funkce</a>
+    </li>
+  </ul>
+</li>
 <li>
   <a href="atestation.html">Atestace</a>
 </li>
 <li>
   <a href="course_data.html">Data</a>
+</li>
+<li>
+  <a href="literature.html">Literatura</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
