--- a/index.html
+++ b/index.html
@@ -315,6 +315,12 @@ $(document).ready(function () {
     <li>
       <a href="03_objects_functions_homework.html">Objekty, proměnné a funkce</a>
     </li>
+    <li>
+      <a href="04_import_export_homework.html">Import a export</a>
+    </li>
+    <li>
+      <a href="06_variables_mutate_summarise_homework.html">Dplyr 1 - funkce mutate, summarise atd.</a>
+    </li>
   </ul>
 </li>
 <li>
