--- a/05_dataframe_manipulation_homework.html
+++ b/05_dataframe_manipulation_homework.html
@@ -319,6 +319,21 @@ $(document).ready(function () {
     <li>
       <a href="03_objects_functions_homework.html">Objekty, proměnné a funkce</a>
     </li>
+    <li>
+      <a href="04_import_export_homework.html">Import a export</a>
+    </li>
+    <li>
+      <a href="05_dataframe_manipulation_homework.html">Prohlížení data framu</a>
+    </li>
+    <li>
+      <a href="06_variables_mutate_summarise_homework.html">Dplyr 1 - funkce mutate, summarise atd.</a>
+    </li>
+    <li>
+      <a href="06_c_dplyr_warmup.html">Dplyr 1.5 - warm-up from class</a>
+    </li>
+    <li>
+      <a href="06_b_variables_mutate_summarise_homework.html">Dplyr 2 - funkce mutate, summarise atd.</a>
+    </li>
   </ul>
 </li>
 <li>
@@ -327,12 +342,9 @@ $(document).ready(function () {
 <li>
   <a href="course_data.html">Data</a>
 </li>
-<<<<<<< HEAD
 <li>
   <a href="literature.html">Literatura</a>
 </li>
-=======
->>>>>>> 2c2c7c6bd20d0361d999d0577229178cf4754961
       </ul>
       <ul class="nav navbar-nav navbar-right">
         
@@ -375,12 +387,6 @@ $(document).ready(function () {
 <p>Kolik chybějích hodnot obsahuje proměnná <code>di_cat</code>?</p>
 <p>Pro odpověď klikněte na tlačítko <strong>code</strong>:</p>
 <pre class="r"><code>is.na(countries$di_cat) %&gt;% sum() #proměnná di_cat obsahuje 1 chybějící hodnotu</code></pre>
-</div>
-<div id="úkol-3" class="section level3">
-<h3>4. úkol</h3>
-<p>Vyfiltrujte všechny proměnné, které <em>nejsou</em> numerické.</p>
-<p>Pro odpověď klikněte na tlačítko <strong>code</strong>:</p>
-<pre class="r"><code>select(.data = countries, !where(is.numeric))</code></pre>
 </div>
 
 
