--- a/06_c_dplyr_warmup.html
+++ b/06_c_dplyr_warmup.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Transformace a sumarizace proměnných - Domácí úkoly</title>
+<title>Dplyr warm-up - úkoly ze začátku semináře 27-10-2020</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -365,40 +365,56 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Transformace a sumarizace proměnných - Domácí úkoly</h1>
+<h1 class="title toc-ignore">Dplyr warm-up - úkoly ze začátku semináře 27-10-2020</h1>
 
 </div>
 
 
 <div id="úkol" class="section level3">
 <h3>1. úkol</h3>
-<p>vytvořte nový objekt jménem demokracie_v_eu, kde budou jen proměnné country, dem_index a di_cat a pouze země, které jsou členy EU (zvažte v jakém pořadí je potřeba příkazy řetězit?)</p>
+<ul>
+<li>1.1 select variables country, uni_prc, life_exp and only observations</li>
+<li>1.2 do the same but only for countries with dem_index bigger than 6</li>
+<li>1.3 and last time the same, but only for countries with dem_index below median dem_index and show from highest life_exp</li>
+<li>1.4 how can we find the one which has median dem_index?</li>
+</ul>
 <p>Pro odpověď klikněte na tlačítko <strong>code</strong>:</p>
-<pre class="r"><code>demokracie_v_eu &lt;- countries %&gt;% filter(eu_member == &quot;yes&quot;) %&gt;% select(country, dem_index, di_cat)</code></pre>
+<pre class="r"><code>countries %&gt;% select(country, uni_prc, life_exp) # 1.1
+
+countries %&gt;% filter(dem_index &gt; 6) %&gt;% select(country, uni_prc, life_exp) # 1.2
+
+countries %&gt;% filter(dem_index &lt; median(dem_index, na.rm = TRUE)) %&gt;% 
+  select(country, uni_prc, life_exp) %&gt;% arrange(desc(life_exp)) #1.3
+
+countries %&gt;% filter(dem_index == median(dem_index, na.rm = TRUE)) #1.4</code></pre>
 </div>
 <div id="úkol-1" class="section level3">
 <h3>2. úkol</h3>
-<p>Sařaďte pozorování (řádky) v tomto novém objektu podle velikosti demokratického indexu od největšího.</p>
+<ul>
+<li>2.1 what is the max dem_index and min dem_index?</li>
+<li>2.2 what is the max and min dem_index in each maj_belief category</li>
+</ul>
 <p>Pro odpověď klikněte na tlačítko <strong>code</strong>:</p>
-<pre class="r"><code>demokracie_v_eu %&gt;% arrange(desc(dem_index))</code></pre>
+<pre class="r"><code>countries %&gt;% summarise(maximum = max(dem_index, na.rm = TRUE),
+                        minimum = min(dem_index, na.rm = TRUE)) #2.1
+
+countries %&gt;% group_by(maj_belief) %&gt;%
+  summarise(maximum = max(dem_index, na.rm = TRUE), minimum = min(dem_index, na.rm = TRUE)) #2.2</code></pre>
 </div>
 <div id="úkol-2" class="section level3">
 <h3>3. úkol</h3>
-<p>Pracujte s demokracie_v_eu a vytvořte novou proměnnou dem_index_100, která bude analogická k dem_index, ale bude nabývat hodnoty od 0 do 100 (nikoliv od 0 do 10 jako dem_index)</p>
+<ul>
+<li>3.1 create new variable - uni_prc_100</li>
+<li>3.2 create new variable - difference from mean life_exp within post_soviet</li>
+</ul>
 <p>Pro odpověď klikněte na tlačítko <strong>code</strong>:</p>
-<pre class="r"><code>demokracie_v_eu %&gt;% mutate(dem_index_100 = dem_index*10)</code></pre>
-</div>
-<div id="úkol-3" class="section level3">
-<h3>4. úkol</h3>
-<p>Pomocí funkce summarise vyjádřete prostý (tj. ne vážený) aritmetický průměr naděje na dožití ve všech zemích v datech (tj. 38 zemí, nikoliv pouze EU).</p>
-<p>Pro odpověď klikněte na tlačítko <strong>code</strong>:</p>
-<pre class="r"><code>countries %&gt;% summarise(mean = mean(life_exp, na.rm = TRUE))</code></pre>
-</div>
-<div id="úkol-4" class="section level3">
-<h3>5. úkol</h3>
-<p>Pomocí kombince funkcí group_by a summarise vyjádřete maximum naděje na dožití zvlášť pro postsovětské a ostatní země v celém data setu.</p>
-<p>Pro odpověď klikněte na tlačítko <strong>code</strong>:</p>
-<pre class="r"><code>countries %&gt;% group_by(postsoviet) %&gt;% summarise(maximum = max(life_exp, na.rm = TRUE))</code></pre>
+<pre class="r"><code>countries %&gt;% mutate(uni_prc_100 = uni_prc*100) %&gt;%
+  select(code, uni_prc, uni_prc_100) # 3.1
+
+countries %&gt;% group_by(postsoviet) %&gt;% 
+  mutate(life_exp_within_postsovier = mean(life_exp, na.rm=TRUE),
+         life_exp_diff_within_postsoviet = life_exp - mean(life_exp, na.rm = TRUE)) %&gt;% 
+  select(code, life_exp,life_exp_within_postsovier, life_exp_diff_within_postsoviet) # 3.2</code></pre>
 </div>
 
 
