--- a/06_variables_mutate_summarise.html
+++ b/06_variables_mutate_summarise.html
@@ -391,6 +391,21 @@ div.tocify {
     <li>
       <a href="03_objects_functions_homework.html">Objekty, proměnné a funkce</a>
     </li>
+    <li>
+      <a href="04_import_export_homework.html">Import a export</a>
+    </li>
+    <li>
+      <a href="05_dataframe_manipulation_homework.html">Prohlížení data framu</a>
+    </li>
+    <li>
+      <a href="06_variables_mutate_summarise_homework.html">Dplyr 1 - funkce mutate, summarise atd.</a>
+    </li>
+    <li>
+      <a href="06_c_dplyr_warmup.html">Dplyr 1.5 - warm-up from class</a>
+    </li>
+    <li>
+      <a href="06_b_variables_mutate_summarise_homework.html">Dplyr 2 - funkce mutate, summarise atd.</a>
+    </li>
   </ul>
 </li>
 <li>
