--- a/atestation.html
+++ b/atestation.html
@@ -330,6 +330,9 @@ $(document).ready(function () {
     <li>
       <a href="06_b_variables_mutate_summarise_homework.html">Dplyr 2 - funkce mutate, summarise atd.</a>
     </li>
+    <li>
+      <a href="06_d_variables_mutate_summarise_homework.html">Dplyr 3 - funkce mutate, summarise atd.</a>
+    </li>
   </ul>
 </li>
 <li>
